testcases/error/exceed_limit_evaluate_size.veryl
module exceed_limit_evaluate_size {
    let _a: logic = {1 repeat 1000000000};
}
